--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,19 +1,40 @@
+.header,
+.middle,
+.footer {
+    display: flex;
+    width: 50%;
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
 .header {
-    width: 100%;
-    height: 100px;
-    border: 1px solid rgb(129, 129, 129);
+    height: 80px;
+    box-shadow: -4px 0px 8px rgba(0, 0, 0, 0.1), 4px 0px 8px rgba(0, 0, 0, 0.1);
 }
 
 .middle {
-    display: flex;
-    width: 100%;
     height: 100%;
-    border: 1px solid rgb(129, 129, 129);
     min-height: 500px;
+    box-shadow: -4px 0px 8px rgba(0, 0, 0, 0.1), 4px 0px 8px rgba(0, 0, 0, 0.1);
 }
 
 .footer {
-    width: 100%;
-    height: 100px;
-    border: 1px solid rgb(129, 129, 129);
+    height: 80px;
+    box-shadow: -4px 4px 8px rgba(0, 0, 0, 0.1), 4px 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+@media (max-width: 1000px) {
+    .header,
+    .middle,
+    .footer {
+        width: 70%;
+    }
+}
+
+@media (max-width: 800px) {
+    .header,
+    .middle,
+    .footer {
+        width: 90%;
+    }
 }
