--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,3 +1,11 @@
+.app-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 90vh;
+    justify-content: center;
+    align-items: center;
+}
+
 .header,
 .middle,
 .footer {
@@ -9,17 +17,31 @@
 
 .header {
     height: 80px;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #373a40;
+    user-select: none;
+    border-radius: 30px 30px 0px 0px;
     box-shadow: -4px 0px 8px rgba(0, 0, 0, 0.1), 4px 0px 8px rgba(0, 0, 0, 0.1);
 }
 
 .middle {
-    height: 100%;
+    justify-content: center;
+    align-items: center;
+    height: 70vh;
     min-height: 500px;
     box-shadow: -4px 0px 8px rgba(0, 0, 0, 0.1), 4px 0px 8px rgba(0, 0, 0, 0.1);
+    box-sizing: border-box;
 }
 
 .footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 80px;
+    background-color: #373a40;
+    user-select: none;
+    border-radius: 0px 0px 30px 30px;
     box-shadow: -4px 4px 8px rgba(0, 0, 0, 0.1), 4px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
