--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,7 +1,12 @@
+html,
+body {
+    overflow-y: hidden;
+    margin: 0 auto;
+}
 .app-container {
     display: flex;
     flex-direction: column;
-    min-height: 90vh;
+    height: 100vh;
     justify-content: center;
     align-items: center;
 }
@@ -10,47 +15,36 @@
 .middle,
 .footer {
     display: flex;
-    width: 50%;
-    max-width: 1000px;
+    width: 100%;
     margin: 0 auto;
 }
 
 .header {
-    height: 80px;
+    height: 10%;
     align-items: center;
     justify-content: space-between;
     background-color: #373a40;
     user-select: none;
-    border-radius: 30px 30px 0px 0px;
-    box-shadow: -4px 0px 8px rgba(0, 0, 0, 0.1), 4px 0px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: -4px 0px 8px rgba(0, 0, 0, 0.2), 4px 0px 8px rgba(0, 0, 0, 0.2);
 }
 
 .middle {
     justify-content: center;
     align-items: center;
-    height: 70vh;
-    min-height: 500px;
-    box-shadow: -4px 0px 8px rgba(0, 0, 0, 0.1), 4px 0px 8px rgba(0, 0, 0, 0.1);
+    overflow: auto;
+    height: 80%;
     box-sizing: border-box;
+    box-shadow: -4px 0px 8px rgba(0, 0, 0, 0.2), 4px 0px 8px rgba(0, 0, 0, 0.2);
 }
 
 .footer {
+    height: 10%;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 80px;
     background-color: #373a40;
     user-select: none;
-    border-radius: 0px 0px 30px 30px;
-    box-shadow: -4px 4px 8px rgba(0, 0, 0, 0.1), 4px 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-@media (max-width: 1000px) {
-    .header,
-    .middle,
-    .footer {
-        width: 70%;
-    }
+    box-shadow: -4px 4px 8px rgba(0, 0, 0, 0.2), 4px 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 @media (max-width: 800px) {
