--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,19 +1,48 @@
-.header {
+html,
+body {
+    overflow-y: hidden;
+    margin: 0 auto;
+}
+.app-container {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+}
+
+.header,
+.middle,
+.footer {
+    display: flex;
     width: 100%;
-    height: 100px;
-    border: 1px solid rgb(129, 129, 129);
+    margin: 0 auto;
+}
+
+.header {
+    height: 10%;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #373a40;
+    user-select: none;
+    box-shadow: -4px 0px 8px rgba(0, 0, 0, 0.2), 4px 0px 8px rgba(0, 0, 0, 0.2);
 }
 
 .middle {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    border: 1px solid rgb(129, 129, 129);
-    min-height: 500px;
+    justify-content: center;
+    align-items: center;
+    overflow: auto;
+    height: 80%;
+    box-sizing: border-box;
+    box-shadow: -4px 0px 8px rgba(0, 0, 0, 0.2), 4px 0px 8px rgba(0, 0, 0, 0.2);
 }
 
 .footer {
-    width: 100%;
-    height: 100px;
-    border: 1px solid rgb(129, 129, 129);
+    height: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #373a40;
+    user-select: none;
+    box-shadow: -4px 4px 8px rgba(0, 0, 0, 0.2), 4px 4px 8px rgba(0, 0, 0, 0.2);
 }
