edit Capsule Add Page
- [x] 사진 첨부 3장까지 가능하도록
- [x] 타임캡슐 개봉일 설정창 하나로 묶기
- [x] 비공개 체크박스 오른쪽 정렬
- [x] 타임캡슐 생성 페이지 FooterCompo 숨김

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,6 +1,7 @@
 html,
 body {
     overflow-y: hidden;
+    overflow-x: hidden;
     margin: 0 auto;
 }
 .app-container {
@@ -28,10 +29,16 @@ body {
 }
 
 .middle {
+    flex: 1;
     justify-content: center;
     align-items: center;
     height: 80%;
     box-sizing: border-box;
+    transition: height 0.3s ease;
+}
+
+.middle.no-footer {
+    margin-bottom: 0;
 }
 
 .footer {
