--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -33,6 +33,7 @@ body {
     flex: 1;
     justify-content: center;
     align-items: center;
+    overflow-y: auto;
     height: 82%;
     box-sizing: border-box;
     transition: height 0.3s ease;
