--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -49,5 +49,6 @@ body {
     justify-content: center;
     align-items: center;
     background-color: #373a40;
+    position: relative;
     user-select: none;
 }
